[package]
name = "freenet-scaffold"
version = "0.2.2"
edition = "2021"
license = "LGPL-3.0-only"
description = "Support library for building Freenet apps"
repository = "https://github.com/freenet/freenet-scaffold"
homepage = "https://freenet.org/"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
freenet-scaffold-macro = "0.2.2"
